cmake_minimum_required(VERSION 3.0.0)
project(re VERSION 0.1.0)
add_executable(re tests/test_ast.c tests/test_charclass.c tests/test_compile.c tests/test_compile_charclass.c tests/test_exec.c tests/test_helpers.c tests/test_main.c tests/test_parse.c tests/test_prog.c tests/test_range.c re_ast.c re_charclass.c re_compile_charclass.c re_compile.c re_exec_dfa.c re_exec_nfa.c re_parse.c re_prog.c re_range.c re_re.c _cpack/impl.c)
set(ANY_OPTS "-Wall" "-Werror" "-Wextra" "-Wshadow" "-Wconversion" "-Wstrict-prototypes" "-Wuninitialized" "-Wpedantic" "--std=c89")
set(DEBUG_OPTS "-g" "-O0")
set(RELEASE_OPTS "-O3")
target_compile_definitions(re PUBLIC "MN__SPLIT_BUILD" "MN_DEBUG")
target_compile_options(re PUBLIC "${ANY_OPTS}")
target_compile_options(re PUBLIC "$<$<CONFIG:RELEASE>:${RELEASE_OPTS}>")
target_compile_options(re PUBLIC "$<$<CONFIG:DEBUG>:${DEBUG_OPTS}>")
